--- a/prompt_III.ipynb
+++ b/prompt_III.ipynb
@@ -2471,7 +2471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusions:\n",
+    "### Conclusions & Deployment:\n",
     "### Data:\n",
     "The dataset collected is related to 17 campaigns that occurred between May 2008 and November 2010, corresponding to a total of 79354 contacts. During these phone campaigns, an attractive long-term deposit application, with good interest rates, was offered. For each contact, a large number of attributes was stored and if there was a success (the target variable).\n",
     "The target variable shows an unbalanced class, which is usually the case for campaigns.\n",
