--- a/prompt_III.ipynb
+++ b/prompt_III.ipynb
@@ -2545,11 +2545,12 @@
     "\n",
     "![Confusion Matrix.png](attachment:a7418ece-8667-4ef6-ab43-675ff958adac.png)\n",
     "\n",
-    "### Next Steps:\n",
-    "1. Redefine further the parameters, due to the large dataset it takes quite some time to run, specially SVC - maybe get a better processing in GO \n",
-    "2. Run the tuned models with the complete list of features\n",
-    "3. Metrics can be tune/redefine to get better understanding of the models outputs\n",
-    "4. Replace the GridSearchCV with HalvingRandomSearchCV or RandomizeSearchCV and compare the results"
+    "### Next Steps and Recommendations:\n",
+    "1. Campaings can make 30% less calls and still getting 90% sucess in the customers representing around 41% increase in customers signing for the long-term deposit application \n",
+    "2. Redefine further the parameters, due to the large dataset it takes quite some time to run, specially SVC - maybe get a better processing in GO \n",
+    "3. Run the tuned models with the complete list of features\n",
+    "4. Metrics can be tune/redefine to get better understanding of the models outputs\n",
+    "5. Replace the GridSearchCV with HalvingRandomSearchCV or RandomizeSearchCV and compare the results"
    ]
   },
   {
